--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@craco/craco": "^6.2.0",
     "@date-io/date-fns": "1.3.13",
+    "@headlessui/react": "^1.3.0",
+    "@heroicons/react": "^1.0.2",
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -55,8 +57,8 @@
     "@types/axios": "^0.14.0",
     "@types/js-cookie": "^2.2.7",
     "@types/react-router-dom": "^5.1.8",
-    "autoprefixer": "9",
-    "postcss": "7",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "autoprefixer": "^9.8.6",
+    "postcss": "^7.0.36",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4"
   }
 }
