--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
     "axios-case-converter": "^0.8.1",
+    "chart.js": "^3.4.1",
     "date-fns": "^2.22.1",
     "js-cookie": "^2.2.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
